<resources>
    <string name="app_name">Clean Coin</string>
    <string name="desc_coin_image">Image of cryptocurrency</string>
    <string name="desc_loading_indicator">Loading indicator image</string>
    <string name="text_description">Description</string>
    <string name="text_price">Price</string>
    <string name="text_name">Name</string>
    <string name="text_loading_error">Something went wrong</string>
    <string name="text_try_again">Try Again</string>
    <string name="desc_previous_coin">Previous coin</string>
    <string name="desc_next_coin">Next coin</string>
</resources>