<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/coin_imageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_coin_image"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_clean_coin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arima_madurai"
            android:text="@string/text_name"
            app:layout_constraintBottom_toTopOf="@id/name_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/coin_imageView" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/arima_madurai_black"
            android:maxLines="2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text"
            tools:text="Litecoin" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arima_madurai"
            android:text="@string/text_price"
            app:layout_constraintBottom_toTopOf="@id/price_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/arima_madurai_black"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/coin_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            tools:text="$234" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arima_madurai"
            android:text="@string/text_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coin_imageView" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/arima_madurai_black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text3"
            app:layout_constraintStart_toStartOf="@id/text3"
            app:layout_constraintTop_toBottomOf="@id/text3"
            tools:text="Nullam accumsan lorem in dui. Fusce convallis metus id felis luctus adipiscing. Pellentesque dapibus hendrerit tortor. Etiam imperdiet imperdiet orci.
Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer tincidunt. Donec interdum, metus et hendrerit aliquet, dolor diam
sagittis ligula, eget egestas libero turpis vel mi. Nunc nec neque." />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>